Arquivo csv com dados processador + readme

--- a/analise.ipynb
+++ b/analise.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "source": [
     " \n",
+    "# 📊 Projeto de Análise de Dados — Quais fatores mais impactam nas faltas dos estudantes universitários?\n",
+    " Desenvolvido por Enio Muliterno Neto , Murilo Dalmolin, Tino Navarro, Naubert Piva Migliavacca\n",
+    " \n",
+    " \n",
     " ## Limitações da Análise e Contexto da Amostra\n",
     "\n",
     "É fundamental, em qualquer projeto de análise de dados, reconhecer as características e possíveis limitações do conjunto de dados utilizado. Esta análise, embora rica em insights, baseia-se em uma amostra com uma característica predominante.\n",
@@ -23,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 29,
    "id": "45492d9f",
    "metadata": {},
    "outputs": [],
@@ -41,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 16,
    "id": "ef10ed16",
    "metadata": {},
    "outputs": [],
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 17,
    "id": "477806dd",
    "metadata": {},
    "outputs": [
@@ -340,7 +344,7 @@
        "[105 rows x 13 columns]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 18,
    "id": "bcd21c39",
    "metadata": {},
    "outputs": [],
@@ -392,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 19,
    "id": "570b6785",
    "metadata": {},
    "outputs": [],
@@ -419,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 20,
    "id": "45a646e7",
    "metadata": {},
    "outputs": [
@@ -452,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 21,
    "id": "a0a47a68",
    "metadata": {},
    "outputs": [
@@ -507,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 22,
    "id": "e228b2df",
    "metadata": {},
    "outputs": [
@@ -575,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 23,
    "id": "f09f2ff4",
    "metadata": {},
    "outputs": [
@@ -622,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 24,
    "id": "27cd17a2",
    "metadata": {},
    "outputs": [
@@ -671,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 25,
    "id": "c4eab2f5",
    "metadata": {},
    "outputs": [
@@ -702,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 26,
    "id": "4d925919",
    "metadata": {},
    "outputs": [
@@ -728,7 +732,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mulit\\AppData\\Local\\Temp\\ipykernel_13032\\2353500671.py:24: FutureWarning: \n",
+      "C:\\Users\\mulit\\AppData\\Local\\Temp\\ipykernel_2036\\2353500671.py:24: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -815,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 27,
    "id": "3cf281c8",
    "metadata": {},
    "outputs": [
@@ -839,9 +843,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mulit\\AppData\\Local\\Temp\\ipykernel_13032\\1387889515.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\mulit\\AppData\\Local\\Temp\\ipykernel_2036\\1387889515.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  analise_chuva_distancia = df_analise.groupby(coluna_distancia)[coluna_chuva].mean().round(2)\n",
-      "C:\\Users\\mulit\\AppData\\Local\\Temp\\ipykernel_13032\\1387889515.py:39: FutureWarning: \n",
+      "C:\\Users\\mulit\\AppData\\Local\\Temp\\ipykernel_2036\\1387889515.py:39: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -930,6 +934,16 @@
     "- Fatores como **ambiente da sala**, **turno das aulas** e **falta de interesse** apresentaram menor impacto na média geral.\n",
     "\n",
     "De modo geral, a análise revela que fatores externos (como clima e deslocamento) e pessoais (cansaço e compromissos) têm peso significativo na frequência acadêmica, sendo essenciais para considerar em políticas de apoio à permanência estudantil.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "82239b31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv('dados_processados.csv', index=False)"
    ]
   }
  ],
